--- a/_data/data.yml
+++ b/_data/data.yml
@@ -39,15 +39,22 @@ career-profile:
     title: Career Profile
     summary: |
       Architecting and  Building Transformative Digital  Solutions at the intersection of Web , Mobile , Content, Cloud Native architectures 
-      Container, Orchestration , Serverless, Mobile Backend As a Service( MBAAS) ,Extensive experience in all stages of SDLC life cycle and
-      has hands-on experience on product evaluation, architecture ,design and development roles as well as good exposure  in support and maintenance 
+      Container, Orchestration , Serverless, Mobile Backend As a Service( MBAAS) 
+      
+      Extensive experience in all stages of SDLC life cycle and has hands-on experience on product evaluation, architecture ,design and development roles as well as good exposure  in support and maintenance 
       of large scale applications ,Proficient  in the technology stack of Java/J2EE Core Java , MVC - Struts, JSF , Webservices - SOAP and REST 
-      and JSR specifications,In-depth working knowledge of Portal / Web Content Management products like  WebSphere Portal/ Web Content Management/ 
+      and JSR specifications
+      
+      In-depth working knowledge of Portal / Web Content Management products like  WebSphere Portal/ Web Content Management/ 
       Portlet Factory/ Enterprise Search, WebSphere Application Server. 
        
-      Hands-on experience in modern web technologies like Angular , Ember, React, Bootstrap , Responsive Web Design, Ajax, JQuery-JSON . Architecting 
-      solutions on top of Google Firebase / Azure Mobile Apps and integration with cross platform applications using Xamarin and React Native
-      and API Gateways like Mulesoft / Apigee,Exposure to Business Domains like Banking , Insurance , Life Sciences , Retail and eCommerce,
+      Hands-on experience in modern web technologies like Angular , Ember, React, Bootstrap , Responsive Web Design, Ajax, JQuery-JSON 
+      
+      Architecting solutions on top of Google Firebase / Azure Mobile Apps and integration with cross platform applications using Xamarin and React Native
+      and API Gateways like Mulesoft / Apigee
+      
+      Exposure to Business Domains like Banking , Insurance , Life Sciences , Retail and eCommerce
+      
       Have fair amount of experience leveraging many of the components from  all 3 major cloud providers -  AWS , GCP and Azure 
 
 education:
