--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme_skin: blue # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
-analytics: 
+analytics: UA-135459704-1
 
 # Sass/SCSS
 sass:
